# jarscope

./: LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-24-jvm-library-docs-mcp-design.md
src/jarscope/: __init__.py  cache.py  jar.py  resolver.py  server.py
src/jvm_mcp/: __init__.py  cache.py  resolver.py  server.py
tests/: test_integration.py  test_jar.py  test_resolver.py
