[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jvm-mcp"
version = "0.1.0"
description = "MCP server for browsing JVM library source JARs"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
jvm-mcp = "jvm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jvm_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access",
]
asyncio_mode = "auto"
