[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarscope"
version = "0.1.0"
description = "Browse and search JVM library source code by Maven coordinate"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tobias Lorenz" },
]
keywords = ["mcp", "jvm", "java", "kotlin", "maven", "jar", "source-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/t-lorenz/jarscope"
Repository = "https://github.com/t-lorenz/jarscope"
Issues = "https://github.com/t-lorenz/jarscope/issues"

[project.scripts]
jarscope = "jarscope.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jarscope"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access",
]
asyncio_mode = "auto"
